--- a/static/frontPage/css/index.css
+++ b/static/frontPage/css/index.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
 .container{
-    background-color: rgba(220, 209, 196, 0.67);
+    background-color: rgba(247, 247, 247, 0.67);
     max-width: 640px;
     margin: 0 auto;
 }
@@ -71,6 +71,7 @@
     max-width: 640px;
     margin: 0 auto;
     padding:  0 2%;
+    padding-bottom: 47px;
 }
 figure{
     width: 48%;
@@ -79,6 +80,14 @@ figure{
     border-top: 1px solid gainsboro;
     margin-bottom:0.5rem;
     padding-top: 0.5rem;
+}
+figure > a {
+    display: block;
+    width: 100%;
+    height: 190px;
+}
+figure > a > img {
+    height: 100%;
 }
 figure img{
     border-radius: 0.1rem;
